# ultrasteer

./: .gitignore  README.md
src/: CMakeLists.txt  DeviceNotification.h  MotionController.h  MotionControllerException.h  Propello.h  PropelloBDisplay.cpp  PropelloDisplay.cpp  SerialCommHelper.cpp
src/3DMouse/: CMakeLists.txt  Mouse3DInput.cpp
src/CTKTransferFunction/: CMakeLists.txt
src/CTKTransferFunction/Core/: ctkCoreExport.h  ctkErrorLogAbstractMessageHandler.h  ctkErrorLogContext.h  ctkErrorLogFDMessageHandler.h  ctkErrorLogFDMessageHandler_p.h  ctkErrorLogLevel.h  ctkErrorLogStreamMessageHandler.cpp  ctkErrorLogStreamMessageHandler.h  ctkErrorLogTerminalOutput.cpp  ctkErrorLogTerminalOutput.h
src/CTKTransferFunction/TransferFunctionWidget/: CMakeLists.txt  ctkTransferFunctionItem.h  ctkTransferFunctionNativeItem.cpp  ctkVisualizationVTKCoreExport.h  ctkWidgetsUtils.cpp  ctkWidgetsUtils.h
src/Control/: CMakeLists.txt  NeedleSteeringRobot.h  PropelloBDisplay.h  RobotControl.cpp  SerialBuffer.cpp  main.cpp  propello.qrc
src/ControlAlgorithms/: CMakeLists.txt  ControlAlgorithms.cpp  ControlAlgorithms.h  Estimator.cpp  Estimator.h  SegmentationAlgorithms.cpp  SegmentationAlgorithms.h  UnscentedKalmanFilter.cpp  UnscentedKalmanFilter.h
src/MATLAB_CTImageAnalysis/: CTScanAnalysis.m  DicomFileRead.m  FluoroMovie.m  Readme.rtf
src/MATLAB_CTImageAnalysis/Functions/: DewarpFolder.m  FiducialSegmentationFolder.m  FitCurve.m  FitLine.m  ForcePlots.m  InsertionSpeed.m  ReconstructFolder.m  ReconstructOrgan.m  Segment.m  SegmentFolder.m  SegmentOrgan.m  ShapeAnalysisCode.m  Threshold.m  circle3.m  dataSummary.m  deFrame.m  findBreakStartStopTime.m  findDistanceAndVelocity.m  findTime.m  forwardFrameTransformation.m  frameCompose.m  generateSummaryData.m  imageFiducialSegmentation.m  imagePoseEstimation.m  pngConvert2tif.m  removeOutliers.m  subsampleMatrix.m  untitled.m
src/MATLAB_CTImageAnalysis/GUIs/: ROIRedoSelectionGUI.fig  ROIRefineSelectionGUI.m  ThresholdControlGUI.fig  ThresholdingConfim.fig  ThresholdingConfimGUI.fig  ThresholdingConfimGUI.m
src/MATLAB_CTImageAnalysis/RespiratoryMotion/: RespKeyPress.m  RespiratoryMotion.m  RespiratoryMotionSummary.doc  needleTip_lateral.mat
src/MATLAB_ColorFlow/: runMe.m
src/MATLAB_CurveFit/: EvaluateModelOnPoints.m  FitModelVariance.m  GenerateOutliers.m
src/MATLAB_CurveFit/LabelData/: AverageTransducerAngle.m  Figure2.m  Figure3.m  FitPoly.m  ImageWeightExperimentCore.m  LabelData.m  (+13 more)
src/MATLAB_EnhancedDoppler/: scratch.m
src/MATLAB_ForceNavigation/: PrepareTileData.m  VisualizeData.m
src/MATLAB_ForcePuncture/: Plane.m  generateData.m
src/MATLAB_MagnetDopplerAnalysis/: ProcessDopplerResponseCine.m  ProcessDopplerSnapshots.m  ReadHeader.m
src/MATLAB_RegistrationValidation/: AnalyzeRobotRegistration.m
src/MATLAB_WorkspaceAnalysis/: WorkspaceAnalysis.m  checkReachable.m  createVolume.m  debugger.m  findCircle.m  initialize.m  renderData.m
src/NeedleEstimationJournal/: Greer_Adebar_Okamura_NeedleDetectionParticleFilter.tex  Outline.docx  library.bib  mathptmx.sym  msabm.sym
src/NeedleEstimator/: CMakeLists.txt  NeedleEstimatorCore.h  NeedleFitter.cpp  NeedleFitter.h
src/RPFileReader/: CMakeLists.txt  RPFileReader.cpp  RPFileReader.h  RPProcess.cpp  RPProcess.h  RPUlterius.cpp  RPUlterius.h  Serial.cpp  Serial.h
src/RPFileWriter/: CMakeLists.txt  RPFileWriter.cpp  RPFileWriter.h
src/RTUltrasteer/: CMakeLists.txt  CTKColorTransferFunctionWidget.cpp  CTKColorTransferFunctionWidget.h  CTKTransferFunctionWidget.cpp  CTKTransferFunctionWidget.h  ChartWidget.cpp  ChartWidget.h  EMCalibrationWidget.cpp  EMCalibrationWidget.h  EstimatorWidget.cpp  EstimatorWidget.h  FSExperimentWidget.cpp  FSExperimentWidget.h  ImageViewerWidget.cpp  ImageViewerWidget.h  MouseInteractorStylePP.h  NeedleTipCalibrationPP.cpp  NeedleTipCalibrationPP.h  PFVisualizerWidget.h  PorcineCadaverWidget.cpp  PorcineCadaverWidget.h  RPWidget.cpp  RPWidget.h  RTUltrasteer.cpp  RTUltrasteer.h  RTUltrasteer.ui  Resizable.cpp  Resizable.h  RobotControlsWidget.cpp  RobotControlsWidget.h  RobotControlsWidget.ui  RobotHardwareWidget.cpp  RobotHardwareWidget.h  RobotStatusWidget.cpp  RobotStatusWidget.h  RobotStatusWidget.ui  SaveDataWidget.cpp  SaveDataWidget.h  SaveDataWidget.ui  TapeRobot.ui  (+15 more)
src/RealTimeUltrasteer/: CMakeLists.txt  Propello.cpp  Propello.h  PropelloBDisplay.cpp  PropelloBDisplay.h  PropelloDisplay.cpp  SaveDlg.cpp  propello.ui
src/RobotControlGUI/: CMakeLists.txt  robotcontrol.cpp  robotcontrol.h  robotcontrol.ui
src/RobotHardware/: ArticulationDevice.cpp  ArticulationDevice.h  CMakeLists.txt  InsertionDevice.cpp  MotionController.cpp  MotionController.h  NeedleSteeringRobot.cpp  NeedleSteeringRobot.h  RollDevice.cpp  RollDevice.h
src/Segment/: CMakeLists.txt  Calibration.cpp  Calibration.h  ParticleFilter.cpp  ParticleFilter.h  RTCore.h  RTMath.cpp  RTMath.h  RTMatrixMath.h  RTUtil.cpp  RTUtil.h  Segment.cpp  Segment.h  SegmentCore.h  UICore.cpp
src/TransferFunctionEditor/: vtkInteractorStyleTransferFunctionEditor.h  vtkTransferFunctionEditorRepresentation.cxx  vtkTransferFunctionEditorRepresentationShapes1D.cxx  vtkTransferFunctionEditorWidget.cxx  vtkTransferFunctionEditorWidgetShapes1D.cxx  vtkTransferFunctionEditorWidgetSimple1D.cxx  vtkTransferFunctionViewer.cxx  vtkTransferFunctionViewer.h
src/UlteriusDataGrabber/: CMakeLists.txt  UlteriusInterface.cpp  UlteriusInterface.h
src/UlteriusDataReader/: CMakeLists.txt  UlteriusDataReader.cpp
src/UlteriusDataRecorder/: CMakeLists.txt  UlteriusDataRecorder.cpp
src/UnitTests/: CMakeLists.txt  StackMain.cpp  testArmadillo.cpp  testIO.cpp  testIO.cpp.cpp  testNeedleEstimator.cpp  testParticleFilter.cpp  testRobotCommunication.cpp  testUnscentedKalmanFilter.cpp  testWebcam.cpp
src/VolumeCreator/: CMakeLists.txt  CubeVisualizer.cpp  CubeVisualizer.h  VolumeCreator.cpp  VolumeCreator.h
trunk/src/: CMakeLists.txt  DeviceNotification.cpp  FindOpenCV.cmake  InsertionDevice.h  NeedleSteeringRobot.cpp  Propello.cpp  PropelloDisplay.h  SerialBuffer.h  propello.ui  save.ui
(+2001 files in other folders)
