cmake_minimum_required(VERSION 2.8)

#SET(OPENCV_DIR "default value" CACHE FILEPATH "OpenCV Base directory") 
Project(RealTimeUltrasteer)

SET(OPENCV_NEW_LIBRARY_NAMES YES)
message(WARNING "opencv_dir: " "${OpenCV_DIR}")
LIST(APPEND CMAKE_MODULE_PATH "${OpenCV_DIR}") 
FIND_PACKAGE(OpenCV)

SET(UlteriusDir "Default Path" CACHE FILEPATH "UlteriusBaseDir")

IF(${DORealTimeUltrasteer})
	ADD_SUBDIRECTORY(RealTimeUltrasteer)
ELSE()
ENDIF()

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../external/alglib ${CMAKE_CURRENT_BINARY_DIR}/alglib)
ADD_SUBDIRECTORY(ControlAlgorithms)
ADD_SUBDIRECTORY(Segment)
ADD_SUBDIRECTORY(RPFileReader)
ADD_SUBDIRECTORY(VolumeCreator)
ADD_SUBDIRECTORY(RTUltrasteer)
ADD_SUBDIRECTORY(RPFileWriter)
ADD_SUBDIRECTORY(UlteriusDataGrabber)
ADD_SUBDIRECTORY(UlteriusDataReader)
ADD_SUBDIRECTORY(UlteriusDataRecorder)
ADD_SUBDIRECTORY(RobotHardware)
ADD_SUBDIRECTORY(RobotControlGUI)
ADD_SUBDIRECTORY(UnitTests)
ADD_SUBDIRECTORY(3DMouse)
