cmake_minimum_required(VERSION 2.8)

SET(OPENCV_DIR "C:/sl/SDK/OpenCV2.2")
SET(OpenCV_DIR "C:/sl/SDK/OpenCV2.2")
FIND_PACKAGE(OpenCV)
Project(RealTimeUltrasteer)

SET(OPENCV_NEW_LIBRARY_NAMES YES)
FIND_PACKAGE(OPENCV)

IF(${DORealTimeUltrasteer})
	ADD_SUBDIRECTORY(RealTimeUltrasteer)
	ADD_SUBDIRECTORY(UnitTests)
	ADD_SUBDIRECTORY(Control)
ELSE()
ENDIF()

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../external/alglib ${CMAKE_CURRENT_BINARY_DIR}/alglib)
ADD_SUBDIRECTORY(Segment)
ADD_SUBDIRECTORY(RPFileReader)
ADD_SUBDIRECTORY(VolumeCreator)
ADD_SUBDIRECTORY(RTUltrasteer)
