cmake_minimum_required(VERSION 2.8)

PROJECT(ControlAlgorithms)

IF(COMMAND CMAKE_POLICY)
	   CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

FIND_PACKAGE (VTK)
IF (VTK_FOUND)
   INCLUDE(${VTK_USE_FILE})
ENDIF(VTK_FOUND)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${OPENCV_INCLUDE_DIRS} 
  ${CMAKE_CURRENT_SOURCE_DIR}/../../external/alglib/src  
  ${CMAKE_CURRENT_SOURCE_DIR}/../Segment/
) 

ADD_LIBRARY(ControlAlgorithms STATIC
	ControlAlgorithms.h
	ControlAlgorithms.cpp
	)

